--- a/libmenu/Makefile.am
+++ b/libmenu/Makefile.am
@@ -1,4 +1,4 @@
-lib_LTLIBRARIES = libgnome-menu-3.la
+lib_LTLIBRARIES = libcinnamon-menu-3.la
 
 AM_CPPFLAGS =				\
 	$(GIO_UNIX_CFLAGS)		\
@@ -8,11 +8,11 @@ AM_CPPFLAGS =				\
 
 AM_CFLAGS = $(WARN_CFLAGS)
 
-libgnome_menu_3_includedir = $(includedir)/gnome-menus-3.0
-libgnome_menu_3_include_HEADERS =		\
+libcinnamon_menu_3_includedir = $(includedir)/cinnamon-menus-3.0
+libcinnamon_menu_3_include_HEADERS =		\
 	gmenu-tree.h
 
-libgnome_menu_3_sources =			\
+libcinnamon_menu_3_sources =			\
 	canonicalize.c			\
 	desktop-entries.c		\
 	entry-directories.c		\
@@ -21,8 +21,8 @@ libgnome_menu_3_sources =			\
 	menu-monitor.c			\
 	menu-util.c
 
-libgnome_menu_3_la_SOURCES =		\
-	$(libgnome_menu_3_sources)	\
+libcinnamon_menu_3_la_SOURCES =		\
+	$(libcinnamon_menu_3_sources)	\
 	canonicalize.h			\
 	desktop-entries.h		\
 	entry-directories.h		\
@@ -31,20 +31,20 @@ libgnome_menu_3_la_SOURCES =		\
 	menu-monitor.h			\
 	menu-util.h
 
-libgnome_menu_3_la_LIBADD = 		\
+libcinnamon_menu_3_la_LIBADD = 		\
 	$(GIO_UNIX_LIBS)
 
-libgnome_menu_3_la_LDFLAGS =			\
+libcinnamon_menu_3_la_LDFLAGS =			\
 	-version-info $(LIB_MENU_LT_VERSION)	\
 	-no-undefined				\
 	-export-symbols-regex gmenu_tree
 
 pkgconfigdir = $(libdir)/pkgconfig
-pkgconfig_DATA = libgnome-menu-3.0.pc
+pkgconfig_DATA = libcinnamon-menu-3.0.pc
 
 EXTRA_DIST =				\
-	libgnome-menu-3.0.pc.in		\
-	libgnome-menu-3.0-uninstalled.pc.in
+	libcinnamon-menu-3.0.pc.in		\
+	libcinnamon-menu-3.0-uninstalled.pc.in
 
 CLEANFILES =
 
@@ -55,15 +55,15 @@ INTROSPECTION_SCANNER_ARGS = --warn-all --add-include-path=$(srcdir)
 INTROSPECTION_COMPILER_ARGS = --includedir=$(srcdir)
 
 if HAVE_INTROSPECTION
-introspection_sources = $(libgnome_menu_3_include_HEADERS) gmenu-tree.c
+introspection_sources = $(libcinnamon_menu_3_include_HEADERS) gmenu-tree.c
 
-GMenu-3.0.gir: libgnome-menu-3.la
-GMenu_3_0_gir_INCLUDES = Gio-2.0
-GMenu_3_0_gir_CFLAGS = $(AM_CPPFLAGS)
-GMenu_3_0_gir_LIBS = libgnome-menu-3.la
-GMenu_3_0_gir_SCANNERFLAGS = --identifier-prefix=GMenu --symbol-prefix=gmenu --pkg-export=libgnome-menu-3.0 --c-include=gmenu-tree.h
-GMenu_3_0_gir_FILES = $(addprefix $(srcdir)/,$(introspection_sources))
-INTROSPECTION_GIRS += GMenu-3.0.gir
+CMenu-3.0.gir: libcinnamon-menu-3.la
+CMenu_3_0_gir_INCLUDES = Gio-2.0
+CMenu_3_0_gir_CFLAGS = $(AM_CPPFLAGS)
+CMenu_3_0_gir_LIBS = libcinnamon-menu-3.la
+CMenu_3_0_gir_SCANNERFLAGS = --identifier-prefix=GMenu --symbol-prefix=gmenu --pkg-export=libcinnamon-menu-3.0 --c-include=gmenu-tree.h
+CMenu_3_0_gir_FILES = $(addprefix $(srcdir)/,$(introspection_sources))
+INTROSPECTION_GIRS += CMenu-3.0.gir
 
 girdir = $(INTROSPECTION_GIRDIR)
 gir_DATA = $(INTROSPECTION_GIRS)
