--- a/libmenu/libcinnamon-menu-3.0-uninstalled.pc.in
+++ b/libmenu/libcinnamon-menu-3.0-uninstalled.pc.in
@@ -3,9 +3,9 @@ exec_prefix=@exec_prefix@
 libdir=@libdir@
 includedir=@includedir@
 
-Name: libgnome-menu
+Name: libcinnamon-menu
 Description: Desktop Menu Specification Implementation
 Requires: gio-unix-2.0
 Version: @VERSION@
-Libs: -L${libdir} -lgnome-menu-3
-Cflags: -I${includedir}/gnome-menus-3.0
+Libs: ${pc_top_builddir}/${pcfiledir}/libcinnamon-menu-3.la
+Cflags: -I${pc_top_builddir}/${pcfiledir}
