--- a/libmenu/libcinnamon-menu-3.0.pc.in
+++ b/libmenu/libcinnamon-menu-3.0.pc.in
@@ -3,9 +3,9 @@ exec_prefix=@exec_prefix@
 libdir=@libdir@
 includedir=@includedir@
 
-Name: libgnome-menu
+Name: libcinnamon-menu
 Description: Desktop Menu Specification Implementation
 Requires: gio-unix-2.0
 Version: @VERSION@
-Libs: ${pc_top_builddir}/${pcfiledir}/libgnome-menu-3.la
-Cflags: -I${pc_top_builddir}/${pcfiledir}
+Libs: -L${libdir} -lcinnamon-menu-3
+Cflags: -I${includedir}/cinnamon-menus-3.0
