gir1.2-cmenu-3.0.install based on gir libdir
gobject-introspection-1.0 >= 1.41.4-1 require library in multiarch path
With this change should works on both older and new package.

--- a/debian/rules
+++ b/debian/rules
@@ -2,6 +2,7 @@
 
 export DEB_LDFLAGS_MAINT_APPEND = -Wl,--as-needed
 DEB_HOST_MULTIARCH ?= $(shell dpkg-architecture -qDEB_HOST_MULTIARCH)
+TYPELIBDIR=$(shell pkg-config gobject-introspection-1.0 --variable libdir | sed -e 's/.//')
 
 %:
 	dh $@ --parallel --with=autoreconf,python3
@@ -10,6 +11,7 @@ override_dh_strip:
 	dh_strip --dbg-package=libcinnamon-menu-3-0-dbg
 
 override_dh_install:
+	sed 's@TYPELIBDIR@${TYPELIBDIR}@' debian/gir1.2-cmenu-3.0.install.in > debian/gir1.2-cmenu-3.0.install
 	dh_install --list-missing
 
 override_dh_auto_clean:
