--- a/debian/control
+++ b/debian/control
@@ -3,10 +3,8 @@ Section: x11
 Priority: optional
 Maintainer: Clement Lefebvre <root@linuxmint.com>
 Build-Depends: debhelper (>= 9),
-               dh-autoreconf,
-               autoconf-archive,
+               meson,
                dh-python,
-               gnome-common,
                gnome-pkg-tools,
                gobject-introspection (>= 0.9.12-4~),
                intltool (>= 0.40.0),
