--- a/debian/rules
+++ b/debian/rules
@@ -1,18 +1,24 @@
 #!/usr/bin/make -f
 
-export DEB_LDFLAGS_MAINT_APPEND = -Wl,--as-needed
-DEB_HOST_MULTIARCH ?= $(shell dpkg-architecture -qDEB_HOST_MULTIARCH)
-TYPELIBDIR=$(shell pkg-config gobject-introspection-1.0 --variable libdir | sed -e 's/.//')
+CONFIGURE_EXTRA_FLAGS = \
+	--prefix=/usr \
+	--libdir=/usr/lib/$(DEB_HOST_MULTIARCH)
 
 %:
-	dh $@ --parallel --with=autoreconf,python3
+	dh $@ --with=gir
+
+override_dh_auto_configure:
+	meson debian/build $(CONFIGURE_EXTRA_FLAGS)
+
+override_dh_auto_build:
+	ninja -C debian/build
+
+override_dh_auto_test:
+	ninja -C debian/build test
 
 override_dh_strip:
 	dh_strip --dbg-package=libcinnamon-menu-3-0-dbg
 
-override_dh_install:
-	sed 's@TYPELIBDIR@${TYPELIBDIR}@' debian/gir1.2-cmenu-3.0.install.in > debian/gir1.2-cmenu-3.0.install
-	dh_install --list-missing
-
-override_dh_auto_clean:
-	-dh_auto_clean
+override_dh_auto_install:
+	DESTDIR=${CURDIR}/debian/tmp \
+	ninja -C debian/build install
