--- a/debian/control
+++ b/debian/control
@@ -3,8 +3,7 @@ Section: x11
 Priority: optional
 Maintainer: Clement Lefebvre <root@linuxmint.com>
 Build-Depends: debhelper (>= 9),
-               dh-autoreconf,
-               autoconf-archive,
+               meson,
                dh-python,
                gnome-common,
                gnome-pkg-tools,
