Add devhelp docs to cinnamon menus for easier reference

--- a/debian/control
+++ b/debian/control
@@ -8,6 +8,7 @@ Build-Depends: debhelper (>= 9),
                gnome-common,
                gnome-pkg-tools,
                gobject-introspection (>= 0.9.12-4~),
+               gtk-doc-tools (>= 1.4),
                intltool (>= 0.40.0),
                libgirepository1.0-dev (>= 0.10.7-1~),
                libglib2.0-dev (>= 2.30.0),
