--- a/meson.build
+++ b/meson.build
@@ -41,3 +41,4 @@ add_global_arguments(c_args, language: 'c')
 gio = dependency('gio-unix-2.0', version: '>= 2.29.15')
 
 subdir('libmenu')
+subdir('docs/reference')
