meson: add option to control building the API docs

--- a/meson_options.txt
+++ b/meson_options.txt
@@ -8,3 +8,8 @@ option('enable_debug',
 	value: true,
 	description: 'Enable debugging'
 )
+ option('docs',
+    type: 'boolean',
+    value: false,
+    description: 'Build the API references (requires gtk-doc)'
+)
