--- a/debian/rules
+++ b/debian/rules
@@ -19,7 +19,8 @@ override_dh_auto_configure:
 		--prefix=/usr \
 		--buildtype=plain \
 		-D deprecated_warnings=false \
-		-D enable_debug=false
+		-D enable_debug=false \
+		-D docs=true
 
 override_dh_auto_clean:
 	-dh_auto_clean
