meson: rename variables that are holdovers from another project
xreader => cmenu

Also the gir does not need to be saved to a variable as it is not being
pulled in as a target to anything.

--- a/libmenu/meson.build
+++ b/libmenu/meson.build
@@ -65,7 +65,7 @@ pkgconfig.generate(
     subdirs: 'cinnamon-menus-3.0'
 )
 
-libdocument_gir = gnome.generate_gir(
+gnome.generate_gir(
     libcinnamon_menus,
     namespace: 'CMenu',
     nsversion: '3.0',
