Move tree item, directory, entry and iter to separate files
The only reason to have them in the same file was because each item
kept a reference to the tree. Since we don't use it, and most likely
never will, there's no real cost to separating it out like this, but
it does help to simplify cmenu-tree.c which is a huge, tangled mess.
This also helps to improve encapsulation overall, which is severely
lacking in cmenu.

--- a/libmenu/meson.build
+++ b/libmenu/meson.build
@@ -2,10 +2,12 @@ header_subdir = 'cinnamon-menus-3.0'
 
 public_headers = [
     'cmenu-tree.h',
+    'cmenu-tree-item.h',
 ]
 
 public_sources = [
     'cmenu-tree.c',
+    'cmenu-tree-item.c',
     public_headers,
 ]
 
@@ -19,6 +21,7 @@ public_sources += gnome.mkenums_simple(
 )
 
 libmenu_private_headers = [
+    'cmenu-tree-item-private.h',
     'desktop-entries.h',
     'entry-directories.h',
     'menu-layout.h',
