--- a/debian/control
+++ b/debian/control
@@ -2,22 +2,19 @@ Source: cinnamon-menus
 Section: x11
 Priority: optional
 Maintainer: Clement Lefebvre <root@linuxmint.com>
-Build-Depends: debhelper (>= 9),
-               meson,
-               dh-python,
-               gnome-common,
-               gnome-pkg-tools,
-               gobject-introspection (>= 0.9.12-4~),
-               gtk-doc-tools (>= 1.4),
-               intltool (>= 0.40.0),
-               libgirepository1.0-dev (>= 0.10.7-1~),
+Build-Depends: debhelper-compat (= 12),
+               dh-sequence-gir,
+               libgirepository1.0-dev (>= 1.58.3),
                libglib2.0-dev (>= 2.30.0),
-               python3 (>= 3.1)
-Standards-Version: 3.9.5
-X-Python3-Version: >= 3.1
+               gobject-introspection (>= 1.58.3),
+               gtk-doc-tools (>= 1.4),
+               meson
+Standards-Version: 4.5.0
 
 Package: libcinnamon-menu-3-0
 Architecture: any
+Section: libs
+Priority: optional
 Depends: ${misc:Depends}, ${shlibs:Depends}
 Description: Cinnamon implementation of the freedesktop menu specification
  The package contains an implementation of the draft
@@ -29,7 +26,7 @@ Description: Cinnamon implementation of the freedesktop menu specification
 
 Package: libcinnamon-menu-3-0-dbg
 Section: debug
-Priority: extra
+Priority: optional
 Architecture: any
 Depends: libcinnamon-menu-3-0 (= ${binary:Version}), ${misc:Depends}
 Description: Cinnamon implementation of the freedesktop menu specification
@@ -43,11 +40,11 @@ Description: Cinnamon implementation of the freedesktop menu specification
 Package: libcinnamon-menu-3-dev
 Architecture: any
 Section: libdevel
+Priority: optional
 Depends: gir1.2-cmenu-3.0 (= ${binary:Version}),
          libcinnamon-menu-3-0 (= ${binary:Version}),
          libglib2.0-dev (>= 2.30.0),
          ${misc:Depends}
-Replaces: gir-repository-dev (<< 0.6.5-6)
 Description: Cinnamon implementation of the freedesktop menu specification
  The package contains an implementation of the draft
  "Desktop Menu Specification" from freedesktop.org:
@@ -58,9 +55,9 @@ Description: Cinnamon implementation of the freedesktop menu specification
 
 Package: gir1.2-cmenu-3.0
 Section: introspection
+Priority: optional
 Architecture: any
-Depends: ${gir:Depends}, ${misc:Depends}, ${shlibs:Depends}
-Conflicts: gobject-introspection-repository
+Depends: ${gir:Depends}, ${misc:Depends}
 Description: GObject introspection data for the Cinnamon menu library
  This package contains introspection data for Cinnamon menu, an
  implementation of the desktop menu specification from freedesktop.org.
