--- a/debian/rules
+++ b/debian/rules
@@ -2,31 +2,14 @@
 
 export DEB_LDFLAGS_MAINT_APPEND = -Wl,--as-needed
 DEB_HOST_MULTIARCH ?= $(shell dpkg-architecture -qDEB_HOST_MULTIARCH)
-TYPELIBDIR=$(shell pkg-config gobject-introspection-1.0 --variable libdir | sed -e 's/.//')
 
 %:
-	dh $@ --parallel --with=python3
+	dh $@ --with gir
 
 override_dh_strip:
 	dh_strip --dbg-package=libcinnamon-menu-3-0-dbg
 
-override_dh_install:
-	sed 's@TYPELIBDIR@${TYPELIBDIR}@' debian/gir1.2-cmenu-3.0.install.in > debian/gir1.2-cmenu-3.0.install
-	dh_install --list-missing
-
 override_dh_auto_configure:
-	meson debian/build \
-		--prefix=/usr \
-		--buildtype=plain \
+	dh_auto_configure -- \
 		-D deprecated_warnings=false \
 		-D enable_docs=true
-
-override_dh_auto_clean:
-	-dh_auto_clean
-
-override_dh_auto_install:
-	DESTDIR=${CURDIR}/debian/tmp \
-	ninja -C debian/build install
-
-override_dh_auto_build:
-	ninja -C debian/build
