--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -1,10 +1,10 @@
 name: Stale Issues
 
 on:
-  # Uncomment to enable scheduled runs:
-  # schedule:
-  #   # Run weekly on Sunday at 2:00 AM UTC
-  #   - cron: '0 2 * * 0'
+  Uncomment to enable scheduled runs:
+  schedule:
+    # Run weekly on Sunday at 2:00 AM UTC
+    - cron: '0 2 * * 0'
   workflow_dispatch:
     inputs:
       days-before-stale:
